Fixed Blur Elements on iOS Safari

--- a/docs/app.css
+++ b/docs/app.css
@@ -370,6 +370,7 @@ body {
     text-shadow: 0px 0px 20px rgba(0,0,0,1);
     background-color: rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     padding: 10px 15px 10px 15px;
     border-radius: 50px;
 
@@ -909,6 +910,7 @@ body {
     padding: 10px 15px 10px 15px;
     background-color: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 50px;
     height: 30px;
     display: flex;
@@ -924,6 +926,7 @@ body {
 #lootbox-button {
     background-color: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 50px;
     width: 30px;
     height: 30px;
@@ -1298,6 +1301,7 @@ textarea:hover {
     font-weight: bold;
     background-color: rgba(0, 0, 0, 0.35);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 50px;
     height: 50px;
     width: 170px;
@@ -1315,6 +1319,7 @@ textarea:hover {
     font-weight: bold;
     background-color: rgba(0, 0, 0, 0.35);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 50px;
     width: 50px;
     height: 50px;
@@ -1330,6 +1335,7 @@ textarea:hover {
     font-weight: bold;
     background-color: rgba(0, 0, 0, 0.35);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 50px;
     width: 50px;
     height: 50px;
@@ -1479,6 +1485,7 @@ textarea:hover {
 #score-entry {
     background-color: rgba(0, 0, 0, 0.35);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     color: #fff;
     padding: 10px 10px 10px 10px;
     min-width: 60px;
@@ -1612,6 +1619,7 @@ textarea:hover {
     text-shadow: 0px 0px 20px rgba(0,0,0,1);
     background-color: rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     padding: 10px 15px 10px 15px;
     border-radius: 50px;
 
